added some references from Kirby

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,87 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+
+@article{HughesCottrellBazilevs2005,
+ title={{Isogeometric analysis: CAD, finite elements, NURBS, exact geometry and mesh refinement}},
+ author={Hughes, TJR and Cottrell, JA and Bazilevs, Y.},
+ journal={Computer methods in applied mechanics and engineering},
+ volume={194},
+ number={39-41},
+ pages={4135--4195},
+ issn={0045-7825},
+ year={2005},
+ publisher={Elsevier}
+}
+
+@article{ChessaSmolinskiBelytschko2002,
+ title={{The extended finite element method (XFEM) for solidification problems}},
+ author={Chessa, J. and Smolinski, P. and Belytschko, T.},
+ journal={International Journal for Numerical Methods in Engineering},
+ volume={53},
+ number={8},
+ pages={1959--1977},
+ issn={1097-0207},
+ year={2002},
+ publisher={Wiley Online Library}
+}
+
+@book{Schwab1998,
+ title={{p-and hp-finite element methods: Theory and applications in solid and fluid mechanics}},
+ author={Schwab, C.},
+ isbn={0198503903},
+ year={1998},
+ publisher={Oxford University Press, USA}
+}
+
+@article{AinsworthCoyle2003,
+ title={{Hierarchic finite element bases on unstructured tetrahedral meshes}},
+ author={Ainsworth, M. and Coyle, J.},
+ journal={International Journal for Numerical Methods in Engineering},
+ volume={58},
+ number={14},
+ pages={2103--2130},
+ issn={1097-0207},
+ year={2003},
+ publisher={Wiley Online Library}
+}
+
+@article{Dunavant1985,
+ title={{High degree efficient symmetrical Gaussian quadrature rules for the triangle}},
+ author={Dunavant, DA},
+ journal={International Journal for Numerical Methods in Engineering},
+ volume={21},
+ number={6},
+ pages={1129--1148},
+ issn={1097-0207},
+ year={1985},
+ publisher={Wiley Online Library}
+}
+
+@article{KeeganRidzalBochev2008,
+ title={{SPARSE--GRID INTEGRATION IN FINITE ELEMENT SPACES}},
+ author={KEEGAN, M. and RIDZAL, D. and BOCHEV, P.},
+ journal={CSRI SUMMER PROCEEDINGS 2008},
+ pages={32},
+ year={2008},
+ publisher={Citeseer}
+}
+
+@article{Kirby2009,
+ title={{Fast simplicial finite element algorithms using Bernstein polynomials}},
+ author={Kirby, R.C.},
+ journal={Numerische Mathematik},
+ note={to appear}
+}
+
+@article{Kirby2010,
+ title={{Fast simplicial quadrature-based finite element operators using Bernstein polynomials}},
+ author={Robert C. Kirby and Kieu Tri Thinh},
+ journal={Numerische Mathematik},
+ note={under review}
+}
+
+
 @ARTICLE{JagerSteinmannKuhl2008,
   author = {J\"ager, P. and Steinmann, P. and Kuhl, E.},
   title = {Modeling three-dimensional crack propagation - A comparison of crack path tracking strategies},
