added kirby-1 figure

--- a/unfinished/kirby-1/chapter.tex
+++ b/unfinished/kirby-1/chapter.tex
@@ -390,7 +390,7 @@ for \( (p,q) \neq (i,j) \), \( \psi^{p,q} \) is \( L^2 \)-orthogonal to \(
 
 \begin{figure}
 \begin{center}
-\input{tricoord.pstex_t}
+\includegraphics[height=3cm]{chapters/kirby-1/pdf/tricoord.pdf} 
 \end{center}
 \caption{Reference triangular and square domains with collapsed
   coordinate transformation.}
