Please stop breaking the .bib file.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -74,14 +74,6 @@
  note={to appear}
 }
 
-@article{Kirby2010,
- title={{Fast simplicial quadrature-based finite element operators using Bernstein polynomials}},
- author={Robert C. Kirby and Kieu Tri Thinh},
- journal={Numerische Mathematik},
- note={under review}
-}
-
-
 @ARTICLE{JagerSteinmannKuhl2008,
   author = {J\"ager, P. and Steinmann, P. and Kuhl, E.},
   title = {Modeling three-dimensional crack propagation - A comparison of crack path tracking strategies},
@@ -4387,9 +4379,7 @@
   author = {R. C. Kirby},
   title = {Fast simplicial finite element algorithms using Bernstein polynomials},
   journal = {Numerische Matematik},
-  year = {2011},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  year = {2011}
 }
 
 @ARTICLE{Kirby2010,
@@ -4397,13 +4387,7 @@
   title = {From Functional Analysis to Iterative Methods},
   journal = {SIAM Review},
   year = {2010},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
-
-
-
-
 
 @ARTICLE{Kirby2006d,
   author = {Robert C. Kirby},
