Add revised oelgaard-2 to unfinished.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2,53 +2,55 @@
 % Encoding: UTF8
 
 
+@book{AhoSethiUllman1986,
+  title={Compilers: Principles, Techniques and Tools},
+  author={Alfred, V. and Sethi, R. and Jeffrey, D. U.},
+  year={1986},
+  publisher={Addison-Wesley},
+  address = {Reading, Massachusetts}
+}
+
 @article{HughesCottrellBazilevs2005,
- title={{Isogeometric analysis: CAD, finite elements, NURBS, exact geometry and mesh refinement}},
- author={Hughes, TJR and Cottrell, JA and Bazilevs, Y.},
- journal={Computer methods in applied mechanics and engineering},
+ title={Isogeometric analysis: {CAD}, finite elements, {NURBS}, exact geometry and mesh refinement},
+ author={Hughes, T. J. R. and Cottrell, J. A. and Bazilevs, Y.},
+ journal={Computer Methods in Applied Mechanics and Engineering},
  volume={194},
  number={39-41},
  pages={4135--4195},
- issn={0045-7825},
  year={2005},
  publisher={Elsevier}
 }
 
 @article{ChessaSmolinskiBelytschko2002,
- title={{The extended finite element method (XFEM) for solidification problems}},
+ title={The extended finite element method {(XFEM)} for solidification problems},
  author={Chessa, J. and Smolinski, P. and Belytschko, T.},
  journal={International Journal for Numerical Methods in Engineering},
  volume={53},
  number={8},
  pages={1959--1977},
- issn={1097-0207},
  year={2002},
- publisher={Wiley Online Library}
 }
 
 @book{Schwab1998,
- title={{p-and hp-finite element methods: Theory and applications in solid and fluid mechanics}},
+ title={{p}-and {hp}-finite element methods: {T}heory and applications in solid and fluid mechanics},
  author={Schwab, C.},
- isbn={0198503903},
  year={1998},
  publisher={Oxford University Press, USA}
 }
 
 @article{AinsworthCoyle2003,
- title={{Hierarchic finite element bases on unstructured tetrahedral meshes}},
+ title={Hierarchic finite element bases on unstructured tetrahedral meshes},
  author={Ainsworth, M. and Coyle, J.},
  journal={International Journal for Numerical Methods in Engineering},
  volume={58},
  number={14},
  pages={2103--2130},
- issn={1097-0207},
  year={2003},
- publisher={Wiley Online Library}
 }
 
 @article{Dunavant1985,
- title={{High degree efficient symmetrical Gaussian quadrature rules for the triangle}},
- author={Dunavant, DA},
+ title={High degree efficient symmetrical {G}aussian quadrature rules for the triangle},
+ author={Dunavant, D. A.},
  journal={International Journal for Numerical Methods in Engineering},
  volume={21},
  number={6},
@@ -59,19 +61,18 @@
 }
 
 @article{KeeganRidzalBochev2008,
- title={{SPARSE--GRID INTEGRATION IN FINITE ELEMENT SPACES}},
+ title={Sparse-grid integration in finite element spaces},
  author={KEEGAN, M. and RIDZAL, D. and BOCHEV, P.},
- journal={CSRI SUMMER PROCEEDINGS 2008},
+ journal={CSRI Summer Proceedings},
  pages={32},
  year={2008},
- publisher={Citeseer}
 }
 
 @article{Kirby2009,
- title={{Fast simplicial finite element algorithms using Bernstein polynomials}},
- author={Kirby, R.C.},
+ title={Fast simplicial finite element algorithms using {B}ernstein polynomials},
+ author={Kirby, R. C.},
  journal={Numerische Mathematik},
- note={to appear}
+ note={To appear}
 }
 
 @ARTICLE{JagerSteinmannKuhl2008,
@@ -85,7 +86,7 @@
 }
 
 @ARTICLE{BabuskaBanerjeeOsborn2003,
-  author={Babu\v{s}ka,I. and Banerjee,U. and Osborn,J. E.},
+  author={Babu\v{s}ka, I. and Banerjee, U. and Osborn, J. E.},
   title={Survey of meshless and generalized finite element methods: {A} unified approach},
   journal={Acta Numerica},
   year={2003},
@@ -100,7 +101,6 @@
   pages={179--190},
   issn={0024-3795},
   year={1986},
-  publisher={Elsevier}
 }
 
 @article{Manteuffel1980,
